2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b56

 * Change: Some css in config.php

 * Fix: Disabled "Show the add vote link" in stats-wizard,
        as this functionality is not implemented yet.

 * Fix: removed redundant function galleryImage()

 * Change: simplified form_choice(); lib/setup.php

 * Fix: Some HTML fixes in config wizard.

 * New: Show h0bbel(legend) for status appearing in step1 check page.

 * New: Added Js to switch graphictoolkit settings.

2005-12-19 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b55

 * Fix: Thumbnail in Successmessage for eCards got lost.

 * Fix: Remove commentspam blacklist entries was broken.

 Thanks to Kai for catching this.

2005-12-18 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b54

 * Change forgot to commit new icon images.

2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b53

 * Change: Code and html nicify.

 * Fix: Button value in move_photo.

2005-12-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b52

 * Change: refactored printChildren and printMicrochilder
	   o Added nice tree pics (ready for rtl)
	   o Created function createTreeArray

 * Fix: Removed debugmessag in save_photos.php

 * Fix: Use gTranslate as some places in classes/Album.php

 * Change: Reword metadataOnUpload help messag.
	   Thanks to Christian "H0bbel" Mohn.

 * Change: Nicified add_form.inc

 * Fix: removed add_admin.inc from list of translateable files.

2005-12-15 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b51

 * New: Added help for metadata on upload.

 * Fix: Metadata on upload.

 * Change: Removed not need 'admin' tab in upload photos.

 * Change: Some text changes in administer startpage.

 * Fix: imagemaps were not working inside Geeklog
   (Thanks Georg)

 * Change: No fix amount of upload files, instead use dynamic count of files.
   	   Used script from  Stickman -- http://www.the-stickman.com

 * Change: Added more debumessages in util.php

 * Change: Set quality for thumbnails sticky to 50

 * Fix: Typo in css/base
