@@ -406,7 +406,7 @@ popup a:hover {
 
 .popupbody  /* controls the background of popup. */ 
 {
-    margin: 25px;
+    margin: 5px;
     background-color: #909090;
 }
 	
